<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softminds.matrixcalculator.FeedBack">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/Feeed"
            android:text="@string/FeedBack"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/FeedT"
            android:layout_below="@id/Feeed"
           android:hint="@string/Mazak"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:id="@+id/Confirm"
        android:layout_below="@id/FeedT"
        android:layout_alignParentEnd="true"
        android:text="@string/Send"

        />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:id="@+id/NotNow"
            android:layout_below="@id/FeedT"
            android:layout_alignParentStart="true"
            android:text="@string/MaybeNot"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@id/NotNow"
            android:text="@string/Warning7"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

</ScrollView>
