<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_function_maker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softminds.matrixcalculator.dialog_activity.FunctionMaker">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MainHint"
        android:text="@string/FunctionMakerHint"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainHint"
        android:id="@+id/PreViewLetters"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/PreView"/>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PreViewLetters"
        android:id="@+id/FunctionMakerHorizontalScroll"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NewTermAdder"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/FunctionX"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto6"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign6"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto5"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto4"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto3"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto2"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/CreatedXAuto1"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/AutoSign1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:id="@+id/FirstXAuto"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:text="@string/X"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/ConstantSign"
                android:layout_marginStart="3dp"
                android:text="@string/plus"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/ConstantValueFunction"
                android:layout_marginStart="3dp"
                android:text="@string/one"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/FunctionMakerHorizontalScroll"
        android:id="@+id/ControlContainer">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/InternalControlContainer">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/FunctionalExponent"/>
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:id="@+id/FunctionMakerExponent"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/FunctionalDegree"/>
            <NumberPicker
                android:layout_width="wrap_content"
                android:id="@+id/FunctionMakerDegree"
                android:layout_gravity="center"
                android:layout_height="100dp">
            </NumberPicker>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ControlContainer"
        android:id="@+id/EditTextCoeContainer">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/MainCoefficientFiller"
            android:textAlignment="center"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/Coefficient"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmFunction"
        android:textAlignment="center"
        android:layout_below="@id/EditTextCoeContainer"
        android:id="@+id/ConfirmMakeFunction"
        />


</RelativeLayout>
